# sptManager

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
include/playerctl/: playerctl-enum-types.h  playerctl-player-manager.h  playerctl-player-name.h  playerctl-player.h  playerctl-version.h  playerctl.h
include/wmctrl/: wmctrl.h
lib/: libplayerctl.so.2.4.1
src/linux/: main.cpp  wmctrl.cpp
src/windows/: main.cpp
